[package]
name = "bsgraphlib-rs"
version = "0.2.0"
authors = ["Clara Carrasquel Fiorini"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ClaraCF/BsGraphLib-rs"
readme = "README.md"

[lib]
name = "bsgraphlib"

[[bin]]
name = "demo"
path = "src/main.rs"
test = true

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = "0.48.0"
