[package]
name = "bsgraphlib-rs"
version = "0.2.1"
authors = ["Clara Carrasquel Fiorini"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ClaraCF/BsGraphLib-rs"
readme = "README.md"

[lib]
name = "bsgraphlib"

[target.'cfg(windows)'.dependencies]
windows = "0.48.0"

[[bin]]
name = "demo"
path = "src/main.rs"
test = true

[demo.dependencies]
bsgraphlib = {path = "src/lib.rs"}
